--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,15 @@
-# build output
-dist/
-
-# generated types
-.astro/
-
-# dependencies
-node_modules/
-
-# logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# environment variables
-.env
-.env.production
-
-# macOS-specific files
-.DS_Store
-
-# IDEs
+# * opinions
 /.vscode/
 
-# * volatile sources
-# . cached sources
+# * cached sources
+node_modules/
 src/integrations/github/graphql/schema.json
 /.i
-# . generated sources
+
+# * generated sources
+.astro/
 src/integrations/graphql/*.ts
 src/content/previews/**/*
+
+# * output
+dist/
