--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "a.betaev.pub",
   "scripts": {
-    "dev": "bun run init && concurrently --restart-after 5000 -n 'vite,gqlcg,auth' 'vite' 'graphql-codegen --watch' 'scripts/dev-env.sh'",
+    "dev": "bun run init && concurrently --restart-after 5000 --restart-tries -1 -n 'vite,gqlcg,auth' 'vite' 'graphql-codegen --watch' 'scripts/dev-env.sh'",
     "deploy": "echo 'not implemented' 1>&2 && exit 1",
     "build": "bun run init && vite build",
     "cleanup": "git clean -fdx",
@@ -10,8 +10,8 @@
   "type": "module",
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
-    "@graphql-codegen/typed-document-node": "^5.0.1",
     "@graphql-codegen/typescript": "^4.0.1",
+    "@graphql-codegen/typescript-graphql-request": "^6.1.0",
     "@graphql-codegen/typescript-operations": "^4.0.1",
     "@types/lodash": "^4.14.201",
     "bun-types": "latest",
